--- a/project/package.json
+++ b/project/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "castle-quiz-battle",
+  "name": "tictactoe-multiplayer",
   "version": "1.0.0",
-  "description": "Jogo de quiz multiplayer com castelos",
+  "description": "Jogo da Velha Multiplayer Online",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "engines": {
-    "node": ">=14.0.0"
+    "nodemon": "^3.0.2"
   }
 }
